@@ -1,3 +1,7 @@
+2009-09-15  Sancho Lerena <slerena@artica.es>
+	
+	* util/pandora_backup.sh: Finished backup command line tool
+
 2009-09-14  Sancho Lerena <slerena@artica.es>
 
 	* bin/pandora_server: Now uses $Config{"enterprise"} to know if
